exercise 1 naive implementation